force-app/main/default/objects/Employee__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account manager</fullName>
            </value>
            <value>
                <fullName>Branch manager</fullName>
            </value>
            <value>
                <fullName>Customer advisor/Welcome agent</fullName>
            </value>
            <value>
                <fullName>Online Account manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>