force-app/main/default/objects/Employee__c/fields/test2__c.field-meta.xml
<CustomField>
    <fullName>test2__c</fullName>
    <label>test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>